Text alignment fix

--- a/src/sass/elements/_background-picker.scss
+++ b/src/sass/elements/_background-picker.scss
@@ -110,6 +110,7 @@
             border: 0;
             padding: 1px;
             border-right: 1px solid $border-grey;
+            text-align: center;
         }
 
         .two-thirds {
